--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     margin-right: 10vw;
     margin-left: 10vw;
+    background-color: blue;
   }
 
   #maincontenttitel {
@@ -25,7 +26,7 @@
     color: red;
     font-family: helvetica;
     overflow-y: hidden;
-      }
+  }
 
   #maincontenttext {
     font-size: 3.5em;
@@ -33,6 +34,7 @@
     font-family: helvetica;
     overflow-y: hidden;
     direction: rtl;
+    color: white;
   }
 }
 
@@ -49,6 +51,7 @@
     overflow-y: hidden;
     margin-left: 30vw;
     margin-right: 30vw;
+    background-color: blue;
   }
 
   #maincontenttitel {
@@ -68,5 +71,7 @@
     font-family: helvetica;
     overflow-y: hidden;
     direction: rtl;
+    color: white;
+
   }
 }
