--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,8 @@
   }
 
   #maincontenttext p {
-    text-decoration: none !important;
-    outline: none;
-    border: 0;
+    color: inherit;
+    text-decoration: none;
   }
 
 
