--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@
     flex-direction: column;
     margin-right: 10vw;
     margin-left: 10vw;
+    padding-right: 20px;
+    padding-left: 20px;
+      padding-bottom: 10px;
     background-color: blue;
   }
 
@@ -37,8 +40,9 @@
   }
 
   #maincontenttext p {
-    color: inherit;
-    text-decoration: none;
+    text-decoration: none !important;
+    outline: none;
+    border: 0;
   }
 
 
@@ -57,6 +61,8 @@
     overflow-y: hidden;
     margin-left: 30vw;
     margin-right: 30vw;
+    padding-right: 10px;
+    padding-left: 10px;
     background-color: blue;
   }
 
@@ -77,11 +83,5 @@
     font-family: helvetica;
     overflow-y: hidden;
     direction: rtl;
-  }
-
-  #maincontenttext p {
-    text-decoration: none !important;
-    outline: none;
-    border: 0;
   }
 }
