--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,22 @@
     display: flex;
     flex-direction: column;
     align-self: center;
-     width: 80vw;
-    height: 80vw;
+    width: 80vw;
+    height: 60vw;
     padding-bottom: 10px;
-    }
+  }
+
+  #blogcontent {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    width: 80vw;
+    height: 120vw;
+    padding-bottom: 10px;
+  }
 
   #maincontenttitel {
-    font-size: 12vw;
+    font-size: 10vw;
     color: red;
     margin: 2px;
     font-family: helvetica;
@@ -35,19 +44,11 @@
   }
 
   #maincontenttext {
-    font-size: 12vw;
+    font-size: 10vw;
     font-family: helvetica;
     overflow-y: hidden;
     direction: rtl;
   }
-
-  #maincontenttext p {
-    text-decoration: none !important;
-    outline: none;
-    border: 0;
-  }
-
-
 }
 
 /* desktop version */
@@ -62,15 +63,25 @@
     flex-direction: column;
     align-self: center;
     overflow-y: hidden;
-    width: 20vw;
-    height: 20vw;
+    width: 14vw;
+    height: 10vw;
     padding-right: 10px;
     padding-left: 10px;
+  }
 
+  #blogcontent {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    overflow-y: hidden;
+    width: 14vw;
+    height: 24vw;
+    padding-right: 10px;
+    padding-left: 10px;
   }
 
   #maincontenttitel {
-    font-size: 3em;
+    font-size: 2em;
     color: red;
     margin-top: 10px;
     margin-right: 10px;
@@ -80,12 +91,10 @@
   }
 
   #maincontenttext {
-    font-size: 3em;
+    font-size: 2em;
     margin: 10px;
     font-family: helvetica;
     overflow-y: hidden;
     direction: rtl;
   }
-
-
 }
