--- a/css/layout.css
+++ b/css/layout.css
@@ -7,6 +7,7 @@
 body {
   overflow-x: hidden;
   overflow-y: hidden;
+  background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(58,58,58,1) 26%, rgba(122,122,122,1) 64%, rgba(0,0,0,1) 100%);
 }
 
 div.container {
