--- a/css/layout.css
+++ b/css/layout.css
@@ -5,17 +5,14 @@
 }
 
 body {
-  overflow-x: hidden;
-  overflow-y: hidden;
-  background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(58,58,58,1) 26%, rgba(122,122,122,1) 64%, rgba(0,0,0,1) 100%);
+  background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(58, 58, 58, 1) 26%, rgba(122, 122, 122, 1) 64%, rgba(0, 0, 0, 1) 100%);
 }
 
 div.container {
   perspective: 1px;
   height: 100vh;
-  width: 100%;
+  width: 50%;
   overflow-x: hidden;
-  overflow-y: auto;
   perspective-origin: 100% initial
 }
 
@@ -36,9 +33,30 @@ div.layer>span, div.layer>img {
 
 div#layer-1 {
   position: absolute;
-  left: 30px;
-  top: 10px;
   width: 400px;
-  z-index: 5;
-  pointer-events: none
+  height: 200px;
+  z-index: 1;
+  pointer-events: none;
+  background-color: white;
+  visibility: hidden;
+}
+
+div#layer-2 {
+  z-index: 2;
+
+}
+
+div#layer-3 {
+  z-index: 2;
+
+}
+
+div#layer-4 {
+  z-index: 2;
+
+}
+
+div#layer-5 {
+  z-index: 2;
+  
 }
