--- a/css/layout.css
+++ b/css/layout.css
@@ -42,21 +42,21 @@ div#layer-1 {
 }
 
 div#layer-2 {
-  z-index: 2;
-
+  z-index: 4;
+  transform: translateZ(0)
 }
 
 div#layer-3 {
-  z-index: 2;
-
+  z-index: 3;
+  transform: translateZ(-0.1px) scale(1.1)
 }
 
 div#layer-4 {
   z-index: 2;
-
+  transform: translateZ(-0.2px) scale(1.2)
 }
 
 div#layer-5 {
-  z-index: 2;
-  
+  z-index: 1;
+  transform: translateZ(-0.3px) scale(1.3)
 }
