--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,37 @@
+@media only screen and (max-width : 1299px) {
+  div#layer-1 {
+    width: 49%;
+    z-index: 1;
+    margin-left: 50.8%;
+    pointer-events: none;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    font-size: 1.2em;
+    color: white;
+  }
+}
+
+@media only screen and (min-width : 1300px) {
+  div#layer-1 {
+    width: 49%;
+    z-index: 1;
+    margin-left: 50.8%;
+    pointer-events: none;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    font-size: 30px;
+    color: white;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -34,21 +68,6 @@ div.layer {
 
 div.layer>span, div.layer>img {
   pointer-events: none
-}
-
-div#layer-1 {
-  width: 400px;
-  height: 200px;
-  z-index: 1;
-  margin-left: 53%;
-  pointer-events: none;
-  display: flex;
-  flex-direction: column;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  font-size: 15px;
-  color: white;
-  visibility: hidden;
 }
 
 div#layer-2 {
