--- a/css/layout.css
+++ b/css/layout.css
@@ -1,110 +1,197 @@
-@media only screen and (max-width : 1299px) {
-  * {
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
+* {
+  padding: 0;
+  margin: 0;
+}
+
+/* mobile version */
+@media only screen and (max-width : 1000px) {
+  body {
+    overflow-x: hidden;
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(58, 58, 58, 1) 26%, rgba(122, 122, 122, 1) 64%, rgba(0, 0, 0, 1) 100%);
   }
 
-  div#layer-1 {
-    width: 49%;
-    z-index: 1;
-    margin-left: 50.8%;
-    pointer-events: none;
+  #header {}
+
+  #headercontent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    width: 100%;
+    max-width: 100%;
+    position: fixed;
+    font-size: 0.95em;
+  }
+
+  #columns {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-end;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    font-size: 1.1em;
+    align-items: center;
+    padding: 30px;
+    margin-bottom: 5vh;
+  }
+
+  #column1 {
+    display: flex;
+    flex-direction: column;
+    order: 1;
+    margin-bottom: 20px;
+    width: 100vw;
+    height: 15vh;
     color: white;
+    overflow: scroll;
+    overflow-x: hidden;
+  }
+
+  #column2 {
+    display: flex;
+    flex-direction: column;
+    order: 2;
+    margin-bottom: 4px;
+    height: 32vh;
+    color: white;
+    overflow: scroll;
+    overflow-x: hidden;
+  }
+
+  #column3 {
+    display: flex;
+    flex-direction: column;
+    order: 3;
+    height: 32vh;
+    color: white;
+    overflow: scroll;
+    overflow-x: hidden;
+  }
+
+  #footer {}
+
+  #footercontent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 100%;
+    color: white;
+    font-size: 0.95em;
   }
 }
 
-@media only screen and (min-width : 1300px) {
-  div#layer-1 {
-    width: 49%;
-    z-index: 1;
-    margin-left: 50.8%;
-    pointer-events: none;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-end;
+/* desktop version */
+@media only screen and (min-width : 1001px) {
+  body {
+    height: 100vh;
     overflow-x: hidden;
     overflow-y: hidden;
-    font-size: 30px;
-    color: white;
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(58, 58, 58, 1) 26%, rgba(122, 122, 122, 1) 64%, rgba(0, 0, 0, 1) 100%);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 
-  * {
+  #header {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #headercontent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin: 10px;
+    width: 11vw;
+    max-width: 100%;
+    height: 7vh;
+  }
+
+  #columns {
+    display: flex;
+    flex-direction: row;
+  }
+
+  #column1 {
+    order: 1;
+    color: white;
+    width: 50%;
+    height: 80vh;
+    margin-left: 5vw;
+    overflow-y: scroll;
+    text-align: center;
+    /* hide scrollbar */
     -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
     /* Firefox */
   }
 
-  /* chrome */
-  *::-webkit-scrollbar {
+  #column2 {
+    order: 2;
+    color: white;
+    width: 25%;
+    height: 80vh;
+    margin-left: 5vw;
+    overflow-y: scroll;
+    text-align: center;
+    /* hide scrollbar */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+
+  #column3 {
+    order: 3;
+    color: white;
+    width: 25%;
+    height: 80vh;
+    overflow-y: scroll;
+    text-align: center;
+    /* hide scrollbar */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+
+  /* hide scrollbar */
+  #column1::-webkit-scrollbar {
     display: none;
   }
-}
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+  #column2::-webkit-scrollbar {
+    display: none;
+  }
 
-body {
-  background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(58, 58, 58, 1) 26%, rgba(122, 122, 122, 1) 64%, rgba(0, 0, 0, 1) 100%);
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
+  #column3::-webkit-scrollbar {
+    display: none;
+  }
 
-div.container {
-  perspective: 1px;
-  height: 100vh;
-  width: 50.7%;
-  overflow-x: hidden;
-  perspective-origin: 100% initial
-}
+  #footer {
+    display: flex;
+    align-items: flex-end;
+    /* footer on the right */
+    justify-content: flex-end;
+  }
 
-div.layer {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  transform-origin: 100% initial;
-  word-wrap: break-word
-}
+  #footercontent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin: 10px;
+    width: 18vw;
+    max-width: 100%;
+    height: 7vh;
+  }
 
-div.layer>span, div.layer>img {
-  pointer-events: none
-}
 
-div#layer-2 {
-  z-index: 4;
-  transform: translateZ(0)
+#texttest {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 30px;
+  text-align: left;
 }
-
-div#layer-3 {
-  z-index: 3;
-  transform: translateZ(-0.1px) scale(1.1)
-}
-
-div#layer-4 {
-  z-index: 2;
-  transform: translateZ(-0.2px) scale(1.2)
-}
-
-div#layer-5 {
-  z-index: 1;
-  transform: translateZ(-0.3px) scale(1.3)
 }
