--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @media only screen and (max-width : 1000px) {
   body {
     overflow-x: hidden;
+    overflow-y: hidden;
     background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(58, 58, 58, 1) 26%, rgba(122, 122, 122, 1) 64%, rgba(0, 0, 0, 1) 100%);
   }
 
@@ -36,7 +37,7 @@
     flex-direction: column;
     order: 1;
     margin-bottom: 20px;
-    width: 100vw;
+    width: 80vw;
     height: 15vh;
     color: white;
     overflow: scroll;
@@ -48,7 +49,7 @@
     flex-direction: column;
     order: 2;
     margin-bottom: 4px;
-    height: 32vh;
+    height: 80vh;
     color: white;
     overflow: scroll;
     overflow-x: hidden;
@@ -62,6 +63,7 @@
     color: white;
     overflow: scroll;
     overflow-x: hidden;
+    visibility: hidden;
   }
 
   #footer {}
@@ -74,6 +76,14 @@
     max-width: 100%;
     color: white;
     font-size: 0.95em;
+    visibility: hidden;
+      }
+
+  #texttest {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 30px;
+    text-align: left;
   }
 }
 
@@ -133,6 +143,7 @@
     width: 25%;
     height: 80vh;
     margin-left: 5vw;
+    margin-right: 3vw;
     overflow-y: scroll;
     text-align: center;
     /* hide scrollbar */
