--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   body {
     overflow-x: hidden;
     background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(58, 58, 58, 1) 26%, rgba(122, 122, 122, 1) 64%, rgba(0, 0, 0, 1) 100%);
-  }
+    }
 
   #header {}
 
@@ -18,6 +18,7 @@
     align-items: center;
     color: white;
     width: 100%;
+    margin-top: 10px;
     max-width: 100%;
     position: fixed;
     font-size: 0.95em;
@@ -27,8 +28,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
-    margin-bottom: 5vh;
+    padding-top: 30px;
+      padding-right: 30px;
+        padding-left: 30px;
+
   }
 
   #column1 {
@@ -50,7 +53,7 @@
     order: 2;
     margin-bottom: 4px;
     width: 90vw;
-    height: 65vh;
+    height: 73vh;
     color: white;
     overflow: scroll;
     overflow-x: hidden;
@@ -68,7 +71,7 @@
   }
 
   #footer {
-
+    visibility: hidden;
   }
 
   #footercontent {
@@ -79,6 +82,7 @@
     max-width: 100%;
     color: white;
     font-size: 0.95em;
+    visibility: hidden;
         }
 
   #texttest {
