--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   body {
     overflow-x: hidden;
     background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(58, 58, 58, 1) 26%, rgba(122, 122, 122, 1) 64%, rgba(0, 0, 0, 1) 100%);
-    }
+  }
 
   #header {}
 
@@ -22,25 +22,23 @@
     max-width: 100%;
     position: fixed;
     font-size: 0.95em;
+    visibility: hidden;
   }
 
   #columns {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 30px;
-      padding-right: 30px;
-        padding-left: 30px;
-
+    padding-right: 30px;
+    padding-left: 30px;
   }
 
   #column1 {
     display: flex;
     flex-direction: column;
     order: 1;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    width: 90vw;
+    margin-bottom: 50px;
+    width: 100vw;
     height: 15vh;
     color: white;
     overflow: scroll;
@@ -53,8 +51,9 @@
     order: 2;
     margin-bottom: 4px;
     width: 90vw;
-    height: 73vh;
+    height: 40vh;
     color: white;
+    margin-bottom: 50px;
     overflow: scroll;
     overflow-x: hidden;
   }
@@ -63,11 +62,10 @@
     display: flex;
     flex-direction: column;
     order: 3;
-    height: 0vh;
+    height: 30vh;
     color: white;
     overflow: scroll;
     overflow-x: hidden;
-    visibility: hidden;
   }
 
   #footer {
@@ -83,13 +81,24 @@
     color: white;
     font-size: 0.95em;
     visibility: hidden;
-        }
+  }
 
   #texttest {
     display: flex;
     flex-direction: column;
     padding-bottom: 30px;
     text-align: left;
+  }
+
+  #texttest p {
+    padding-bottom: 3px;
+  }
+
+  .column2image {
+    padding-bottom: 10px;
+    height: 50vw;
+    width: 50vw;
+    opacity: 0.8;
   }
 }
 
@@ -134,6 +143,7 @@
     width: 50%;
     height: 80vh;
     margin-left: 5vw;
+    margin-right: 3vw;
     overflow-y: scroll;
     text-align: center;
     /* hide scrollbar */
@@ -146,10 +156,10 @@
   #column2 {
     order: 2;
     color: white;
-    width: 25%;
+    width: 25vw;
     height: 80vh;
-    margin-left: 5vw;
-    margin-right: 3vw;
+    margin-left: 6vw;
+    margin-right: 6vw;
     overflow-y: scroll;
     text-align: center;
     /* hide scrollbar */
@@ -162,10 +172,12 @@
   #column3 {
     order: 3;
     color: white;
-    width: 25%;
-    height: 80vh;
+    width: 16vw;
+    height: 40vh;
+    margin-left: 3vw;
+    margin-right: 4vw;
     overflow-y: scroll;
-    text-align: center;
+    text-align: left;
     /* hide scrollbar */
     -ms-overflow-style: none;
     /* IE and Edge */
@@ -204,11 +216,21 @@
     height: 7vh;
   }
 
+  #texttest {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 30px;
+    text-align: left;
+  }
 
-#texttest {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 30px;
-  text-align: left;
-}
+  #texttest p {
+    padding-bottom: 3px;
+  }
+
+  .column2image {
+    padding-bottom: 10px;
+    height: 12vw;
+    width: 12vw;
+    opacity: 0.8;
+  }
 }
