--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,10 @@
 /* mobile version */
 @media only screen and (max-width : 1000px) {
   body {
-    overflow-x: hidden;
     height: 100vh;
     max-height: 100vh;
+    overflow-y: hidden;
+    overflow-x: hidden;
     background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(58, 58, 58, 1) 26%, rgba(122, 122, 122, 1) 64%, rgba(0, 0, 0, 1) 100%);
   }
 
@@ -24,7 +25,7 @@
     max-width: 100%;
     position: fixed;
     font-size: 0.95em;
-    visibility: hidden;
+
   }
 
   #columns {
@@ -39,13 +40,13 @@
     display: flex;
     flex-direction: column;
     order: 1;
-    margin-bottom: 50px;
     width: 100vw;
-    height: 15vh;
+    height: 10vh;
     color: white;
     overflow: scroll;
     overflow-x: hidden;
-  }
+    visibility: hidden;
+      }
 
   #column2 {
     display: flex;
@@ -72,17 +73,17 @@
 
   #footer {
     visibility: hidden;
-  }
+      }
 
   #footercontent {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     width: 100%;
     max-width: 100%;
     color: white;
     font-size: 0.95em;
-    visibility: hidden;
+
   }
 
   #texttest {
@@ -108,6 +109,7 @@
 @media only screen and (min-width : 1001px) {
   body {
     height: 100vh;
+    max-height: 100vh;
     overflow-x: hidden;
     overflow-y: hidden;
     background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(58, 58, 58, 1) 26%, rgba(122, 122, 122, 1) 64%, rgba(0, 0, 0, 1) 100%);
