--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,10 @@
   #column3 {
     display: flex;
     flex-direction: column;
+
     order: 3;
+    width: 50vw;
+    margin-right: 40vw;
     height: 30vh;
     color: white;
     overflow: scroll;
@@ -72,7 +75,7 @@
   }
 
   #footer {
-    margin-top: 11vh;
+  visibility: hidden;
       }
 
   #footercontent {
