--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
     margin-left: 4.5%;
     width: 90%;
     border: solid 1px grey;
+    margin-top: 5vw;
 
   }
 
@@ -87,7 +88,6 @@
   }
 
   #imagecolumn {
-
     order: 4;
     color: white;
     width: 90vw;
@@ -157,6 +157,7 @@
   #header {
     display: flex;
     flex-direction: column;
+    margin-top: 5px;
     border: solid 1px grey;
   }
 
@@ -262,6 +263,10 @@
   }
 
   #column3::-webkit-scrollbar {
+    display: none;
+  }
+
+  #imagecolumn::-webkit-scrollbar {
     display: none;
   }
 
