--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@
     width: 90%;
     border: solid 1px grey;
     margin-top: 5vw;
-
   }
 
   #headercontent {
@@ -29,7 +28,7 @@
     padding: 5px;
     padding-top: 10px;
     padding-bottom: 10px;
-    font-size: 0.95em;
+    font-size: 0.90em;
   }
 
   #columns {
@@ -47,6 +46,7 @@
     width: 90vw;
     height: 20vh;
     color: white;
+    font-size: 0.90em;
     overflow: scroll;
     overflow-x: hidden;
     border: solid 1px grey;
@@ -76,7 +76,7 @@
     margin-bottom: 5vw;
     height: 30vh;
     color: white;
-    font-size: 1em;
+    font-size: 0.90em;
     overflow: scroll;
     overflow-x: hidden;
     border: solid 1px grey;
@@ -118,7 +118,7 @@
     width: 100%;
     max-width: 100%;
     color: white;
-    font-size: 0.95em;
+    font-size: 0.90em;
   }
 
   #texttest {
@@ -181,7 +181,9 @@
     order: 1;
     color: white;
     width: 50%;
-    height: 80vh;
+    height: 76vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
     margin-left: 5vw;
     margin-right: 3vw;
     overflow-y: scroll;
@@ -199,6 +201,8 @@
     color: white;
     width: 25vw;
     height: 30vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
     margin-left: 6vw;
     margin-right: 6vw;
     overflow-y: scroll;
@@ -216,6 +220,8 @@
     color: white;
     width: 25vw;
     height: 30vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
     margin-left: 3vw;
     margin-right: 5vw;
     overflow-y: scroll;
@@ -232,7 +238,9 @@
     order: 1;
     color: white;
     width: 20vw;
-    height: 80vh;
+    height: 76vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
     margin-left: 29.5vw;
     overflow-y: scroll;
     text-align: left;
@@ -253,7 +261,7 @@
     text-decoration: underline;
   }
 
-  /* hide scrollbar */
+    /* hide scrollbar */
   #column1::-webkit-scrollbar {
     display: none;
   }
