--- a/css/style.css
+++ b/css/style.css
@@ -107,17 +107,26 @@
   }
 
   #footer {
-    visibility: hidden;
+    margin-left: 4.5%;
+    width: 90%;
+    border: solid 1px grey;
+    margin-top: 2vw;
+
   }
 
   #footercontent {
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    width: 100%;
-    max-width: 100%;
+    justify-content: left;
+    align-items: left;
     color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-size: 0.90em;
+  }
+
+  #footercontent p {
+    color: inherit;
+    text-decoration: none;
   }
 
   #texttest {
