--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,7 @@
     justify-content: right;
     align-items: right;
     color: white;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
     font-size: 0.90em;
   }
 
@@ -69,10 +68,11 @@
     display: flex;
     flex-direction: column;
     order: 1;
-    width: 60vw;
+    width: 55vw;
     margin-right: 30vw;
     margin-top: 2vw;
     margin-bottom: 2vw;
+    padding: 10px;
     height: 30vh;
     color: white;
     font-size: 0.90em;
@@ -119,9 +119,9 @@
     justify-content: left;
     align-items: left;
     color: white;
-    padding-top: 10px;
-    padding-bottom: 10px;
+   padding: 10px;
     font-size: 0.90em;
+
   }
 
   #footercontent p {
@@ -213,6 +213,7 @@
     margin-bottom: 2vh;
     margin-left: 6vw;
     margin-right: 6vw;
+    padding: 3px;
     overflow-y: scroll;
     text-align: center;
     /* hide scrollbar */
@@ -232,6 +233,7 @@
     margin-bottom: 2vh;
     margin-left: 3vw;
     margin-right: 5vw;
+    padding: 3px;
     overflow-y: scroll;
     text-align: left;
     /* hide scrollbar */
@@ -249,7 +251,8 @@
     height: 76vh;
     margin-top: 2vh;
     margin-bottom: 2vh;
-    margin-left: 29.5vw;
+    margin-left: 29vw;
+    padding: 3px;
     overflow-y: scroll;
     text-align: left;
     /* hide scrollbar */
