--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,14 @@
   #column3 {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     order: 1;
-    width: 55vw;
-    margin-right: 30vw;
+    width: 60vw;
+    margin-right: 27vw;
     margin-top: 2vw;
     margin-bottom: 2vw;
-    padding: 10px;
-    height: 20vh;
+    padding: 5px;
+    height: 15vh;
     color: white;
     font-size: 0.90em;
     overflow: scroll;
