--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@
     order: 4;
     margin-bottom: 0px;
     font-size: 0.90em;
+    padding: 5px;
     width: 90vw;
     height: 20vh;
     color: white;
