--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,11 @@
   }
 
   #header {
-    margin-left: 4.5%;
-    width: 90%;
+    margin-left: 3.7%;
+    width: 92%;
     border: solid 1px grey;
     margin-top: 6vw;
+    margin-bottom: 2vw;
   }
 
   #headercontent {
@@ -41,7 +42,7 @@
     display: flex;
     flex-direction: column;
     order: 2;
-    width: 90vw;
+    width: 91vw;
     height: 20vh;
     margin-bottom: 2vw;
     color: white;
@@ -57,7 +58,7 @@
     order: 4;
     margin-bottom: 0px;
     font-size: 0.90em;
-    width: 90vw;
+    width: 89vw;
     padding: 5px;
     height: 20vh;
     color: white;
@@ -73,9 +74,8 @@
     flex-direction: column;
     justify-content: flex-start;
     order: 1;
-    width: 60vw;
+    width: 62vw;
     margin-right: 27vw;
-    margin-top: 2vw;
     margin-bottom: 2vw;
     padding: 5px;
     height: 15vh;
@@ -94,7 +94,7 @@
   #imagecolumn {
     order: 4;
     color: white;
-    width: 90vw;
+    width: 92vw;
     height: 30vh;
       font-size: 0.90em;
     overflow-y: scroll;
@@ -114,8 +114,8 @@
   }
 
   #footer {
-    margin-left: 4.5%;
-    width: 90%;
+    margin-left: 3.7%;
+    width: 92%;
     border: solid 1px grey;
     margin-top: 2vw;
   }
