--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,10 @@
   #header {
     display: flex;
     flex-direction: column;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 5vw;
+    margin-left: 5vw;
     border: solid 1px grey;
   }
 
@@ -295,7 +298,10 @@
     /* footer on the right */
     justify-content: flex-end;
     border: solid 1px grey;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 5vw;
+    margin-left: 5vw;
   }
 
   #footercontent {
