--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,10 @@
     max-height: 100vh;
     overflow-y: hidden;
     overflow-x: hidden;
-    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(58, 58, 58, 1) 26%, rgba(122, 122, 122, 1) 64%, rgba(0, 0, 0, 1) 100%);
+    background-image: url("beeldje render.PNG");
+    background-position: top ;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 
   #header {
@@ -154,7 +157,7 @@
     max-height: 100vh;
     overflow-x: hidden;
     overflow-y: hidden;
-    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(58, 58, 58, 1) 26%, rgba(122, 122, 122, 1) 64%, rgba(0, 0, 0, 1) 100%);
+    background-image: url("beeldje render.PNG");
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -174,10 +177,10 @@
 
   #headercontent {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    padding-left: 2vw;
     color: white;
-    width: 11vw;
     max-width: 100%;
     height: 4vh;
   }
@@ -208,7 +211,7 @@
     order: 2;
     color: white;
     width: 25vw;
-    height: 30vh;
+    height: 87vh;
     margin-left: 1vw;
     margin-right: 6vw;
     padding: 3px;
@@ -226,7 +229,7 @@
     order: 3;
     color: white;
     width: 25vw;
-    height: 30vh;
+      height: 87vh;
     margin-left: 3vw;
     margin-right: 5vw;
     padding: 3px;
@@ -297,10 +300,11 @@
 
   #footercontent {
     display: flex;
-    justify-content: center;
+    display: flex;
     align-items: center;
+    padding-right: 2vw;
+    height: 4vh;
     color: white;
-    width: 18vw;
     max-width: 100%;
     height: 4vh;
   }
