--- a/css/style.css
+++ b/css/style.css
@@ -42,51 +42,31 @@
   }
 
   #column1 {
-    order: 2;
-    width: 94vw;
-    margin-bottom: 2vw;
-    color: white;
-    font-size: 0.90em;
-    overflow: scroll;
-    overflow-x: hidden;
-    border: solid 1px grey;
-    /* hide scrollbar */
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
-      visibility: hidden;
-  }
-
-  #column2 {
-    order: 4;
-    margin-bottom: 0px;
-    font-size: 0.90em;
-    width: 89.2vw;
-    padding: 5px;
+    order: 1;
+    width: 80vw;
     height: 20vh;
+    margin-bottom: 6vw;
+      padding: 5px;
     color: white;
-    margin-bottom: 0px;
-    border: solid 1px grey;
+    font-size: 0.80em;
     overflow: scroll;
     overflow-x: hidden;
+    border: solid 1px grey;
     /* hide scrollbar */
     -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
     /* Firefox */
-      visibility: hidden;
   }
 
   #column3 {
-    order: 1;
+    order: 2;
     width: 62vw;
-    margin-bottom: 2vw;
-
+    margin-bottom: 3vw;
     padding: 5px;
     height: 50vh;
     color: white;
-    font-size: 0.90em;
+    font-size: 0.80em;
     overflow: scroll;
     overflow-x: hidden;
     /* hide scrollbar */
@@ -98,25 +78,13 @@
       }
 
   #column3 p {
-    padding-bottom: 8px;
+    padding-bottom: 10px;
   }
 
-  #imagecolumn {
-    order: 4;
-    color: white;
-    width: 92vw;
-    height: 30vh;
-    font-size: 0.90em;
-    overflow-y: scroll;
-    text-align: left;
-    margin-bottom: 2vw;
-    /* hide scrollbar */
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
-    border: solid 1px grey;
+  #texttest  {
+    padding-bottom: 10px;
   }
+
 
   a {
     color: inherit;
@@ -166,13 +134,10 @@
   }
 
   #texttest p {
-    padding-bottom: 5px;
-  }
 
-  p {
-    font-size: 0.90em;
-    padding-bottom: 0px;
-  }
+    }
+
+
 
   .column2image {
     height: 50vw;
@@ -231,7 +196,7 @@
     order: 1;
     color: white;
     width: 40%;
-    height: 87vh;
+    height: 50vh;
     margin-left: 5vw;
     margin-right: 0vw;
     padding: 3px;
