--- a/css/style.css
+++ b/css/style.css
@@ -10,156 +10,8 @@
     max-height: 100vh;
     overflow-y: hidden;
     overflow-x: hidden;
-    background-color: #d1d8e5;
-    background-position: top ;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-
-  #header {
-    margin-left: 3vw;
-    width: 92%;
-    border: solid 1px grey;
-    visibility: hidden;
-  }
-
-  #headercontent {
-    display: flex;
-    justify-content: right;
-    align-items: flex-start;
-    color: white;
-    padding: 2vh;
-    font-size: 0.90em;
-  }
-
-  #columns {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-left: 3vw;
-  }
-
-  #column1 {
-    order: 1;
-    width: 90vw;
-    height: 20vh;
-    margin-bottom: 6vw;
-      padding: 5px;
-    color: blue;
-    font-size: 0.80em;
-    overflow: scroll;
-    overflow-x: hidden;
-    border: solid 1px black;
-    /* hide scrollbar */
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
-  }
-
-  #column3 {
-    order: 2;
-    width: 62vw;
-    margin-bottom: 3vw;
-    padding: 5px;
-    height: 50vh;
-    color: black;
-    font-size: 0.80em;
-    overflow: scroll;
-    overflow-x: hidden;
-    /* hide scrollbar */
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
-    border: solid 1px blue;
-      }
-
-  #column3 p {
-    padding-bottom: 5px;
-  }
-
-  #texttest  {
-    padding-bottom: 10px;
-  }
-
-
-  a {
-    color: inherit;
-    text-decoration: underline;
-  }
-
-  /* hide scrollbar */
-  #column1::-webkit-scrollbar {
-    display: none;
-  }
-
-  #column2::-webkit-scrollbar {
-    display: none;
-  }
-
-  #column3::-webkit-scrollbar {
-    display: none;
-  }
-
-  #imagecolumn::-webkit-scrollbar {
-    display: none;
-  }
-
-  #footer {
-    margin-left: 3vw;
-    width: 92%;
-    border: solid 1px grey;
-    margin-top: 2vw;
-    visibility: hidden;
-  }
-
-  #footercontent {
-    color: white;
-    padding: 10px;
-    font-size: 0.90em;
-  }
-
-  #footercontent p {
-    color: inherit;
-    text-decoration: none;
-  }
-
-  #texttest {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-  }
-
-  #texttest p {
-
-    }
-
-
-
-  .column2image {
-    height: 50vw;
-    width: 50vw;
-  }
-
-  /* fetish objects */
-  .draggable {
-    width: 70vw;
-    position: absolute;
-  }
-}
-
-/* desktop version */
-@media only screen and (min-width : 1001px) {
-  body {
-    height: 100vh;
-    max-height: 100vh;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    background-color: #d1d8e5;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background-color: white;
+    background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
   }
@@ -169,10 +21,8 @@
     flex-direction: column;
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-right: 5vw;
+    margin-right: 50vw;
     margin-left: 5vw;
-    border: solid 1px grey;
-    visibility: hidden;
   }
 
   #headercontent {
@@ -192,14 +42,14 @@
 
   #column1 {
     order: 1;
-    color: blue;
-    width: 40%;
+    color: black;
+    width: 20%;
     height: 50vh;
-    margin-left: 5vw;
+    margin-left: 25vw;
     margin-right: 0vw;
+    margin-top: 20vh;
     padding: 10px;
     overflow-y: scroll;
-      border: solid 1px black;
     /* hide scrollbar */
     -ms-overflow-style: none;
     /* IE and Edge */
@@ -209,29 +59,12 @@
 
   #column2 {
     order: 2;
-    color: white;
-    width: 25vw;
-    height: 87vh;
-    margin-left: 3vw;
-    margin-right: 5vw;
-    padding: 3px;
-    overflow-y: scroll;
-    text-align: left;
-    /* hide scrollbar */
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
-    border: solid 1px grey;
-  }
-
-  #column3 {
-    order: 3;
     color: black;
-    width: 25vw;
-    height: 87vh;
+    width: 20vw;
+    height: 50vh;
     margin-left: 1vw;
-    margin-right: 5vw;
+    margin-right: 1vw;
+    margin-top: 20vh;
     padding: 10px;
     overflow-y: scroll;
     text-align: left;
@@ -240,17 +73,17 @@
     /* IE and Edge */
     scrollbar-width: none;
     /* Firefox */
-    border: solid 1px blue;
-
   }
 
-  #imagecolumn {
-    order: 1;
+  #column3 {
+    order: 5;
     color: black;
-    width: 15vw;
-    height: 86.4vh;
-    margin-left: 32.35vw;
-    padding: 3px;
+    width: 20vw;
+    height: 50vh;
+    margin-left: 0vw;
+    margin-right: 5vw;
+    margin-top: 20vh;
+    padding: 10px;
     overflow-y: scroll;
     text-align: left;
     /* hide scrollbar */
@@ -258,8 +91,9 @@
     /* IE and Edge */
     scrollbar-width: none;
     /* Firefox */
-    border: solid 1px grey;
   }
+
+
 
   #column3 p {
     padding-bottom: 6px;
@@ -318,6 +152,187 @@
     padding-bottom: 15px;
   }
 
+  #texttest p {
+    padding-bottom: 6px;
+  }
+
+  .column2image {
+    width: 12vw;
+  }
+
+  /* fetish objects */
+  .draggable {
+    width: 16vw;
+    position: absolute;
+  }
+}
+
+/* desktop version */
+@media only screen and (min-width : 1001px) {
+  body {
+    height: 100vh;
+    max-height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    background-color: white;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  #header {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 50vw;
+    margin-left: 5vw;
+  }
+
+  #headercontent {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 2vw;
+    color: black;
+    max-width: 100%;
+    height: 4vh;
+  }
+
+  #columns {
+    display: flex;
+    flex-direction: row;
+  }
+
+  #column1 {
+    order: 1;
+    color: black;
+    width: 40%;
+    height: 50vh;
+    margin-left: 25vw;
+    margin-right: 0vw;
+    margin-top: 20vh;
+    padding: 10px;
+    overflow-y: scroll;
+    /* hide scrollbar */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+
+  #column2 {
+    order: 2;
+    color: black;
+    width: 20vw;
+    height: 50vh;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    margin-top: 20vh;
+    padding: 10px;
+    overflow-y: scroll;
+    text-align: left;
+    /* hide scrollbar */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+
+  #column3 {
+    order: 5;
+    color: black;
+    width: 20vw;
+    height: 50vh;
+    margin-left: 0vw;
+    margin-right: 5vw;
+    margin-top: 20vh;
+    padding: 10px;
+    overflow-y: scroll;
+    text-align: left;
+    /* hide scrollbar */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+
+  #imagecolumn {
+    order: 1;
+    color: black;
+    width: 20vw;
+    height: 86.4vh;
+    margin-left: 15vw;
+    padding: 3px;
+    overflow-y: scroll;
+    text-align: left;
+    /* hide scrollbar */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+    border: solid 1px grey;
+    visibility: hidden;
+  }
+
+  #column3 p {
+    padding-bottom: 6px;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: underline;
+  }
+
+  /* hide scrollbar */
+  #column1::-webkit-scrollbar {
+    display: none;
+  }
+
+  #column2::-webkit-scrollbar {
+    display: none;
+  }
+
+  #column3::-webkit-scrollbar {
+    display: none;
+  }
+
+  #imagecolumn::-webkit-scrollbar {
+    display: none;
+  }
+
+  #footer {
+    display: flex;
+    align-items: flex-end;
+    /* footer on the right */
+    justify-content: flex-end;
+    border: solid 1px grey;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 5vw;
+    margin-left: 5vw;
+    visibility: hidden;
+  }
+
+  #footercontent {
+    display: flex;
+    display: flex;
+    align-items: center;
+    padding-right: 2vw;
+    height: 4vh;
+    color: black;
+    max-width: 100%;
+    height: 4vh;
+  }
+
+  #texttest {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding-bottom: 15px;
+  }
 
   #texttest p {
     padding-bottom: 6px;
