--- a/css/style.css
+++ b/css/style.css
@@ -21,17 +21,23 @@
     flex-direction: column;
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-right: 50vw;
+    margin-right: 20vw;
     margin-left: 5vw;
+    width: 70vw;
+    height: 15vh;
+    overflow-y: scroll;
+    /* hide scrollbar */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  
   }
 
   #headercontent {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
     padding-left: 2vw;
     color: black;
-    max-width: 100%;
+
     height: 4vh;
   }
 
@@ -185,20 +191,23 @@
   #header {
     display: flex;
     flex-direction: column;
+    height: 20vh;
+    width: 45vw;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 50vw;
     margin-left: 5vw;
+    overflow-y: scroll;
+    /* hide scrollbar */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
   }
 
   #headercontent {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
     padding-left: 2vw;
     color: black;
-    max-width: 100%;
-    height: 4vh;
   }
 
   #columns {
