--- a/css/style.css
+++ b/css/style.css
@@ -26,18 +26,18 @@
     width: 70vw;
     height: 15vh;
     overflow-y: scroll;
+    overflow-x: hidden;
     /* hide scrollbar */
     -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
     /* Firefox */
-  
+
   }
 
   #headercontent {
     padding-left: 2vw;
     color: black;
-
     height: 4vh;
   }
 
